--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
       <!--Navbar-->
-      <nav>
+      <nav id="navbar">
         <div id="nav-main">
             <a href="index.html" id="marchio-pausa-caffe"><img src="icone/marchio-pausa-caffe.svg"></img></a>
 
@@ -122,5 +122,33 @@
         </div>
     </div>
 
+ <!--Footer-->
+ <footer>
+
+    <div id="blocco-footer-sx"> <!--Blocco footer di SINISTRA-->
+        <div id="marchio-footer"><img src="icone/orizzontale-marchio-pausa-caffe.svg"></img></div>
+        <p id="aba-footer">2024 - Accademia di Belle Arti di Catania</p>
+        
+        <div id="social-footer">
+            <a href="https://www.abacatania.it/"><img src="icone/twitter.svg"></img></a>
+            <a href="https://www.abacatania.it/"><img src="icone/facebook.svg"></img></a>
+            <a href="https://www.abacatania.it/"><img src="icone/instagram.svg"></img></a>
+        </div>
+    </div>
+
+    <div id="blocco-footer-dx"> <!--Blocco footer di DESTRA-->
+        <p id="powered-by-footer">Powered by</p>
+        <img id="marchio-abact" src="icone/marchio-abact.svg"></img>
+        
+        <div id="info-footer">
+            <p><a href="https://www.abacatania.it/">Chi siamo</a></p>
+            <p><a href="https://www.abacatania.it/">Privacy</a></p>
+        </div>
+    </div>
+
+</footer>
+
+<!--Javascript-->
+<script src="js/navbar.js"></script>
 </body>
 </html>
