Completata pagina storia e origini

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--<video class="img-hero" src="img/hero-video.mp4" controls></video> ------- Prova video hero-->
         <img class="img-hero" src="img/hero-home.jpg"></img>
        
-        <div id="blocco-hero">
+        <div id="blocco-hero-home">
             <img id="hero-marchio" src="icone/marchio-pausa-caffe.svg"></img>
             <h2 id="hero-sottotitolo">Amante del caffè? Sei nel posto giusto.</h2>
             
