Completata pagina miscele e tipologie

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
     <!--Hero section-->
     <div id="hero-section">
-        <!--<video class="img-hero" src="img/hero-video.mp4" controls></video> ------- Prova video hero-->
-        <img class="img-hero" src="img/hero-home.jpg"></img>
+        <!--Video in loop-->
+        <video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video> 
+        <!--<img class="img-hero" src="img/hero-home.jpg"></img>-->
        
         <div id="blocco-hero-home">
             <img id="hero-marchio" src="icone/marchio-pausa-caffe.svg"></img>
