--- a/storia.html
+++ b/storia.html
@@ -46,8 +46,8 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">Introduzione</h4>
         <h5 class="testo-corrente">
-            <p>Il caffè è una bevanda tra le più nobili e antiche del nostro pianeta, e possiede alle spalle una storia avventurosa e affascinante. </p>
-            <p>La pianta del caffè, nelle sue numerose varietà, è nata e si è evoluta naturalmente a partire dal IX secolo nell’Etiopia orientale. </p>
+            <p class="paragrafo">Il caffè è una bevanda tra le più nobili e antiche del nostro pianeta, e possiede alle spalle una storia avventurosa e affascinante. </p>
+            <p class="paragrafo">La pianta del caffè, nelle sue numerose varietà, è nata e si è evoluta naturalmente a partire dal IX secolo nell’Etiopia orientale. </p>
             <p>Sulla sua scoperta aleggiano numerose tesi e leggende, tra le quali la più nota è quella del pastore etiope Kaldi.</p>
         </h5>
     </div>
@@ -57,8 +57,8 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">La leggenda del pastore Kaldi</h4>
         <h5 class="testo-corrente">
-            <p>Secondo la leggenda, risalente al 700 d.C. , il pastore era solito portare a pascolare le sue capre nelle colline dell’altopiano abissino (Abissinia, attuale Etiopia).</p>
-            <p>Un giorno, incontrando una pianta di caffè, queste cominciarono a mangiarne le bacche e a masticarne le foglie. Durante la notte, anziché dormire, rimasero sveglie e in movimento, con un’energia e una vivacità mai manifestata fino ad allora. </p>
+            <p class="paragrafo">Secondo la leggenda, risalente al 700 d.C. , il pastore era solito portare a pascolare le sue capre nelle colline dell’altopiano abissino (Abissinia, attuale Etiopia).</p>
+            <p class="paragrafo">Un giorno, incontrando una pianta di caffè, queste cominciarono a mangiarne le bacche e a masticarne le foglie. Durante la notte, anziché dormire, rimasero sveglie e in movimento, con un’energia e una vivacità mai manifestata fino ad allora. </p>
             <p>Il pastore allora, argutamente, ipotizzò che una delle possibili ragioni potesse dipendere proprio dal consumo della pianta; così decise di sperimentarne le bacche e provare ad abbrustolirle, macinarle e crearne un’infusione. E così nacque la forma primitiva e originaria del caffè che conosciamo!</p>
         </h5>
     </div>
@@ -66,9 +66,9 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">L'arrivo in Europa</h4>
         <h5 class="testo-corrente">
-            <p>Cominciando ad essere esportata anche nel resto del mondo, sembra che in Europa la bevanda arrivò nel XVI secolo a Malta, allora parte del Regno di Sicilia, attraverso gli schiavi turchi imprigionati dai cavalieri di San Giovanni nel 1565, anno del Grande assedio di Malta. </p>
-            <p>La pianta raggiunse poi raggiungere l’Italia e Venezia tramite gli stretti legami commerciali e marittimi con l’Impero Ottomano. Da Venezia, il caffè fu poi introdotto nel resto d’Europa.</p>
-            <p>Le prime case del caffè europee aprirono a Venezia nel 1645. Questi locali divennero rapidamente popolari, e il concetto si diffuse ad altre città italiane e poi a tutto il continente: Londra aprì la sua prima casa del caffè nel 1652, Parigi nel 1672, e Vienna nel 1683, quest'ultima in seguito alla battaglia di Vienna, quando i Turchi lasciarono sacchi di caffè mentre si ritiravano.</p>
+            <p class="paragrafo">Cominciando ad essere esportata anche nel resto del mondo, sembra che in Europa la bevanda arrivò nel XVI secolo a Malta, allora parte del Regno di Sicilia, attraverso gli schiavi turchi imprigionati dai cavalieri di San Giovanni nel 1565, anno del Grande assedio di Malta. </p>
+            <p class="paragrafo">La pianta raggiunse poi raggiungere l’Italia e Venezia tramite gli stretti legami commerciali e marittimi con l’Impero Ottomano. Da Venezia, il caffè fu poi introdotto nel resto d’Europa.</p>
+            <p class="paragrafo">Le prime case del caffè europee aprirono a Venezia nel 1645. Questi locali divennero rapidamente popolari, e il concetto si diffuse ad altre città italiane e poi a tutto il continente: Londra aprì la sua prima casa del caffè nel 1652, Parigi nel 1672, e Vienna nel 1683, quest'ultima in seguito alla battaglia di Vienna, quando i Turchi lasciarono sacchi di caffè mentre si ritiravano.</p>
             <p>Secondo alcuni storici, il caffè fu la prima vera merce ad essere esportata a livello mondiale, il che anticiperebbe la nascita della globalizzazione di circa 350 anni.</p>
         </h5>
     </div>
@@ -76,7 +76,7 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">L'espansione nelle Americhe</h4>
         <h5 class="testo-corrente">
-            <p>Il caffè si diffuse in America all'inizio del XVIII secolo. I Francesi, grazie alla spinta del re Luigi XIV, portarono le prime piante di caffè nelle loro colonie nei Caraibi, precisamente a Martinica, nel 1720. Da lì, la coltivazione del caffè si diffuse rapidamente in altre parti delle Indie Occidentali e dell'America Centrale e Meridionale.</p>
+            <p class="paragrafo">Il caffè si diffuse in America all'inizio del XVIII secolo. I Francesi, grazie alla spinta del re Luigi XIV, portarono le prime piante di caffè nelle loro colonie nei Caraibi, precisamente a Martinica, nel 1720. Da lì, la coltivazione del caffè si diffuse rapidamente in altre parti delle Indie Occidentali e dell'America Centrale e Meridionale.</p>
             <p>Il Brasile divenne uno dei principali produttori di caffè al mondo dopo che le piante furono introdotte lì nel 1727. Oggi, il Brasile è il più grande produttore di caffè a livello mondiale, seguito da altri paesi come il Vietnam, la Colombia e l'Etiopia.</p>
         </h5>
     </div>
@@ -84,8 +84,8 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">Le varietà del caffè</h4>
         <h5 class="testo-corrente">
-            <p>Il caffè vanta molteplici varietà in natura, oltre 120, tra le quali le più note e sviluppate sono la Coffea Arabica, pianta tropicale che comprende sottovarietà quali Moka, Bourbon, Maragogype, Typica; e la Coffea Canephora (la cosiddetta Robusta, originaria della Costa D’Avorio e delle repubbliche centro-africane) che comprende invece sottovarietà quali Timor Hybrid (in gergo, l’ara-busta in quanto ibrido di Arabica e Robusta) o Catimor.</p>
-            <p>L’Arabica, se considerata come uno dei due rami principali della famiglia del caffè, costituisce circa il 60% della sua produzione ed esportazione totale; un 2% è riservato alla varietà Liberica, tipica dell’Africa centrale, e il restante 38% alla Robusta. </p>
+            <p class="paragrafo">Il caffè vanta molteplici varietà in natura, oltre 120, tra le quali le più note e sviluppate sono la Coffea Arabica, pianta tropicale che comprende sottovarietà quali Moka, Bourbon, Maragogype, Typica; e la Coffea Canephora (la cosiddetta Robusta, originaria della Costa D’Avorio e delle repubbliche centro-africane) che comprende invece sottovarietà quali Timor Hybrid (in gergo, l’ara-busta in quanto ibrido di Arabica e Robusta) o Catimor.</p>
+            <p class="paragrafo">L’Arabica, se considerata come uno dei due rami principali della famiglia del caffè, costituisce circa il 60% della sua produzione ed esportazione totale; un 2% è riservato alla varietà Liberica, tipica dell’Africa centrale, e il restante 38% alla Robusta. </p>
             <p>La principale differenza tra le due maggiori varietà, Arabica e Robusta, consiste fondamentalmente nella forma del chicco e nelle caratteristiche legate al gusto e all’intensità della bevanda finale.</p>
         </h5>
     </div>
@@ -93,7 +93,7 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">Il consumo di caffè nella società odierna</h4>
         <h5 class="testo-corrente">
-            <p>Il caffè è oggi una delle bevande più popolari al mondo e il suo consumo è radicato in molte culture contemporanee. Ogni giorno, milioni di persone iniziano la giornata con una tazza di caffè, un rito e rituale quotidiano che è diventato parte integrante della vita moderna. </p>
+            <p class="paragrafo">Il caffè è oggi una delle bevande più popolari al mondo e il suo consumo è radicato in molte culture contemporanee. Ogni giorno, milioni di persone iniziano la giornata con una tazza di caffè, un rito e rituale quotidiano che è diventato parte integrante della vita moderna. </p>
             <p>La sua popolarità è alimentata non solo dal suo gusto e dagli effetti stimolanti della caffeina, ma anche dalla natura ritualistica del momento della “pausa caffè”, e della sua capacità di favorire interazioni sociali, momenti conviviali, piacere personale ed appagamento simbolico. Il caffè ha avuto nella modernità un successo tale da essere diventato parte della memoria collettiva e della cultura popolare, anche grazie all’immaginario proposto dall’industria pubblicitaria e cinematografica, nonché dalla cultura consumistica.</p>
         </h5>
     </div>
