Completata pagina ricette + sistemate icone e marchio sito

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!--Navbar-->
       <nav id="navbar">
         <div id="nav-main">
-            <a href="index.html" id="marchio-pausa-caffe"><img src="icone/marchio-pausa-caffe.svg"></img></a>
+            <a href="index.html" id="navbar-marchio"><img src="icone/marchio-navbar.svg"></img></a>
 
             <div id="navbar-list">
                 <ul>
@@ -31,9 +31,10 @@
 
     <!--Hero section-->
     <div id="hero-section">
-        <!--Video in loop-->
-        <video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video> 
-        <!--<img class="img-hero" src="img/hero-home.jpg"></img>-->
+
+        <!--Prova video in loop-->
+        <!--<video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video>-->
+        <img class="img-hero" src="img/hero-home.jpg"></img>
        
         <div id="blocco-hero-home">
             <img id="hero-marchio" src="icone/marchio-pausa-caffe.svg"></img>
