--- a/miscele.html
+++ b/miscele.html
@@ -12,7 +12,7 @@
       <!--Navbar-->
       <nav id="navbar">
         <div id="nav-main">
-            <a href="index.html" id="marchio-pausa-caffe"><img src="icone/marchio-pausa-caffe.svg"></img></a>
+            <a href="index.html" id="navbar-marchio"><img src="icone/marchio-navbar.svg"></img></a>
 
             <div id="navbar-list">
                 <ul>
@@ -138,9 +138,9 @@
             <div class="blocco-titolo-testo">
                 <h4 class="titolo-paragrafo">Caratteristiche</h4>
                 <h5 class="testo-corrente">
-                    <p class="paragrafo">Freschezza: Il caffè in grani conserva meglio gli aromi e i sapori rispetto al caffè macinato.</p>
-                    <p class="paragrafo">Versatilità: Puoi macinare i chicchi secondo la tua preferenza, adattandoli a vari metodi di preparazione come espresso, moka, filtro, ecc.</p>
-                    <p>Conservazione: Se conservati correttamente, i chicchi mantengono la loro freschezza più a lungo.</p>
+                    <p class="paragrafo"><b>Freschezza:</b> Il caffè in grani conserva meglio gli aromi e i sapori rispetto al caffè macinato.</p>
+                    <p class="paragrafo"><b>Versatilità:</b> Puoi macinare i chicchi secondo la tua preferenza, adattandoli a vari metodi di preparazione come espresso, moka, filtro, ecc.</p>
+                    <p><b>Conservazione:</b> Se conservati correttamente, i chicchi mantengono la loro freschezza più a lungo.</p>
                 </h5>
             </div>
 
@@ -165,9 +165,9 @@
             <div class="blocco-titolo-testo">
                 <h4 class="titolo-paragrafo">Caratteristiche</h4>
                 <h5 class="testo-corrente">
-                    <p class="paragrafo">Comodità: Pronto all'uso, non richiede macinatura.</p>
-                    <p class="paragrafo">Consistenza: Macinato specificamente per vari metodi di preparazione (espresso, moka, filtro).</p>
-                    <p>Varietà: Disponibile in una vasta gamma di miscele e tostature.</p>
+                    <p class="paragrafo"><b>Comodità:</b> Pronto all'uso, non richiede macinatura.</p>
+                    <p class="paragrafo"><b>Consistenza:</b> Macinato specificamente per vari metodi di preparazione (espresso, moka, filtro).</p>
+                    <p><b>Varietà:</b> Disponibile in una vasta gamma di miscele e tostature.</p>
                 </h5>
             </div>
 
@@ -198,9 +198,9 @@
             <div class="blocco-titolo-testo">
                 <h4 class="titolo-paragrafo">Caratteristiche</h4>
                 <h5 class="testo-corrente">
-                    <p class="paragrafo">Sostenibilità: La carta filtro è biodegradabile e può essere smaltita nei rifiuti organici.</p>
-                    <p class="paragrafo">Compatibilità: Utilizzate principalmente in macchine per caffè ESE, ma possono essere adattate ad altre macchine con appositi accessori.</p>
-                    <p>Freschezza: Solitamente sigillate singolarmente per mantenere la freschezza del caffè.</p>
+                    <p class="paragrafo"><b>Sostenibilità:</b> La carta filtro è biodegradabile e può essere smaltita nei rifiuti organici.</p>
+                    <p class="paragrafo"><b>Compatibilità:</b> Utilizzate principalmente in macchine per caffè ESE, ma possono essere adattate ad altre macchine con appositi accessori.</p>
+                    <p><b>Freschezza:</b> Solitamente sigillate singolarmente per mantenere la freschezza del caffè.</p>
                 </h5>
             </div>
     </div>
@@ -216,8 +216,8 @@
             <div class="blocco-titolo-testo">
                 <h4 class="titolo-paragrafo">Caratteristiche</h4>
                 <h5 class="testo-corrente">
-                    <p class="paragrafo">Comodità: Estremamente facile da usare, ideale per chi ha poco tempo.</p>
-                    <p>Porzionatura: Dosi precise, che garantiscono una preparazione sempre perfetta </p>
+                    <p class="paragrafo"><b>Comodità:</b> Estremamente facile da usare, ideale per chi ha poco tempo.</p>
+                    <p><b>Porzionatura:</b> Dosi precise, che garantiscono una preparazione sempre perfetta </p>
                 </h5>
             </div>
 
@@ -247,9 +247,9 @@
             <div class="blocco-titolo-testo">
                 <h4 class="titolo-paragrafo">Caratteristiche</h4>
                 <h5 class="testo-corrente">
-                    <p class="paragrafo">Sostenibilità: Riduzione dell'impatto ambientale grazie all'uso di materiali biodegradabili.</p>
-                    <p class="paragrafo">Compatibilità: Disponibili per vari sistemi di macchine da caffè.</p>
-                    <p>Smaltimento: Possono essere compostate in impianti di compostaggio industriale.</p>
+                    <p class="paragrafo"><b>Sostenibilità:</b> Riduzione dell'impatto ambientale grazie all'uso di materiali biodegradabili.</p>
+                    <p class="paragrafo"><b>Compatibilità:</b> Disponibili per vari sistemi di macchine da caffè.</p>
+                    <p><b>Smaltimento:</b> Possono essere compostate in impianti di compostaggio industriale.</p>
                 </h5>
             </div>
     </div>
