--- a/storia.html
+++ b/storia.html
@@ -12,7 +12,7 @@
       <!--Navbar-->
       <nav id="navbar">
         <div id="nav-main">
-            <a href="index.html" id="marchio-pausa-caffe"><img src="icone/marchio-pausa-caffe.svg"></img></a>
+            <a href="index.html" id="navbar-marchio"><img src="icone/marchio-navbar.svg"></img></a>
 
             <div id="navbar-list">
                 <ul>
@@ -94,7 +94,8 @@
         <h4 class="titolo-paragrafo">Il consumo di caffè nella società odierna</h4>
         <h5 class="testo-corrente">
             <p class="paragrafo">Il caffè è oggi una delle bevande più popolari al mondo e il suo consumo è radicato in molte culture contemporanee. Ogni giorno, milioni di persone iniziano la giornata con una tazza di caffè, un rito e rituale quotidiano che è diventato parte integrante della vita moderna. </p>
-            <p>La sua popolarità è alimentata non solo dal suo gusto e dagli effetti stimolanti della caffeina, ma anche dalla natura ritualistica del momento della “pausa caffè”, e della sua capacità di favorire interazioni sociali, momenti conviviali, piacere personale ed appagamento simbolico. Il caffè ha avuto nella modernità un successo tale da essere diventato parte della memoria collettiva e della cultura popolare, anche grazie all’immaginario proposto dall’industria pubblicitaria e cinematografica, nonché dalla cultura consumistica.</p>
+            <p class="paragrafo">La sua popolarità è alimentata non solo dal suo gusto e dagli effetti stimolanti della caffeina, ma anche dalla natura ritualistica del momento della “pausa caffè”, e della sua capacità di favorire interazioni sociali, momenti conviviali, piacere personale ed appagamento simbolico.</p>
+            <p>Il caffè ha avuto nella modernità un successo tale da essere diventato parte della memoria collettiva e della cultura popolare, anche grazie all’immaginario proposto dall’industria pubblicitaria e cinematografica, nonché dalla cultura consumistica.</p>
         </h5>
     </div>
 
