--- a/storia.html
+++ b/storia.html
@@ -31,7 +31,8 @@
 
     <!--Hero section-->
     <div id="hero-section">
-        
+
+         <!--<video class="img-hero" src="img/hero-video.mp4" controls></video> ------- Prova video hero-->
         <img class="img-hero" src="img/hero-storia-e-origini.jpg"></img>
        
         <div id="blocco-hero">
