Sistemazione difetto .titolo-sezione +  errore ortografico ricetta-pasta.html

--- a/ricetta-pasta.html
+++ b/ricetta-pasta.html
@@ -47,7 +47,7 @@
         <h5 class="testo-corrente">
             <ul>
                 <li>350g pasta corta tipo mezze maniche</li>
-                </li>Sale e pepe</li>
+                <li>Sale e pepe</li>
                 <li>100g pomodori secchi sott’olio</li>
                 <li>8 gamberi rossi</li>
                 <li>Polvere di caffè</li>
