--- a/curiosità.html
+++ b/curiosità.html
@@ -60,7 +60,7 @@
     </div>
 
     <img class="img-sezione" src="img/curiosita-img1.jpg"></img>
-    <h3 class="titolo-sezione">Curiosità</h3>
+    <h3 class="titolo-sezione">Usi alternativi</h3>
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">Elimina gli odori</h4>
         <h5 class="testo-corrente">
@@ -80,7 +80,7 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">Cura del corpo</h4>
         <h5 class="testo-corrente">
-            <p class="paragrafo">I I fondi del caffè possono essere utilizzato  per creare uno esfoliante naturale.</p>
+            <p class="paragrafo">I fondi del caffè possono essere utilizzato  per creare uno esfoliante naturale.</p>
             <p>Grazie alla texture  granulosa, aiuta a rimuovere le cellule morte dalla pelle,  contribuendo a eliminare lo strato corneo dell'epidermide e  lasciando la più luminosa, liscia e morbida. Ottimo come scrub  per viso e corpo!</p>
         </h5>
     </div>
