Prove sostituzione immagini + aggiunta icona

--- a/miscele.html
+++ b/miscele.html
@@ -31,7 +31,6 @@
 
     <!--Hero section-->
     <div id="hero-section">
-        <!--<video class="img-hero" src="img/hero-video.mp4" controls></video> ------- Prova video hero-->
         <img class="img-hero" src="img/hero-miscele-e-tipologie.jpg"></img>
        
         <div id="blocco-hero">
@@ -75,7 +74,7 @@
         </a>
     </div>
 
-    <img class="img-sezione" src="img/miscele-img1.jpg"></img>
+    <img class="img-sezione" src="img/miscele-img1-versione2.jpg"></img>
 
      <!--Blocco MISCELE-->   
     <h3 class="titolo-sezione">Le miscele</h3>
