--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <div id="hero-section">
 
         <!--Prova video in loop-->
-        <!--<video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video>-->
+        <!--<div id="video-hero">
+            <video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video>
+        </div>-->
         <img class="img-hero" src="img/hero-home.jpg"></img>
        
         <div id="blocco-hero-home">
