modifiche alla pagina produzioni

--- a/produzione.html
+++ b/produzione.html
@@ -57,7 +57,7 @@
          <h5 class="testo-corrente">
              <p class="paragrafo">Utilizzano una leva che l'utente deve spingere per generare la pressione necessaria per estrarre l'espresso.</p>
              <p class="paragrafo"><b>Vantaggi:</b> controllo totale sul processo di estrazione.</p>
-             <p> ><b>Svantaggi</b> richiedono esperienza e abilità per ottenere risultati consistenti.
+             <p> <b>Svantaggi:</b> richiedono esperienza e abilità per ottenere risultati consistenti.
 
              </p>
          </h5>
@@ -87,8 +87,8 @@
         <h4 class="titolo-paragrafo">French Press (o caffettiera a stantuffo)</h4>
         <h5 class="testo-corrente">
             <p class="paragrafo">Caffè macinato immerso in acqua calda, separato poi con un filtro a stantuffo.</p>
-            <p class="paragrafo">Vantaggi: semplice da usare, produce un caffè ricco e corposo.</p>
-            <p class="paragrafo">Svantaggi: può risultare meno pratico rispetto ad altre macchine, e richiede tempo per la pulizia.</p>
+            <p class="paragrafo"><b>Vantaggi:</b> semplice da usare, produce un caffè ricco e corposo.</p>
+            <p class="paragrafo"><b>Svantaggi:</b> può risultare meno pratico rispetto ad altre macchine, e richiede tempo per la pulizia.</p>
         </h5>
     </div>
 
@@ -98,8 +98,8 @@
         <h4 class="titolo-paragrafo">Moka</h4>
         <h5 class="testo-corrente">
             <p class="paragrafo">L'acqua nel serbatoio inferiore viene riscaldata e trasformata in vapore, che passa attraverso il caffè macinato creando la bevanda.</p>
-            <p class="paragrafo">Vantaggi: iconica e tradizionale, produce un caffè forte.</p>
-            <p class="paragrafo">Svantaggi: richiede pratica per ottenere risultati ottimali, adatta principalmente per piccole quantità di caffè.</p>
+            <p class="paragrafo"><b>Vantaggi:</b> iconica e tradizionale, produce un caffè forte.</p>
+            <p class="paragrafo"><b>Svantaggi:</b> richiede pratica per ottenere risultati ottimali, adatta principalmente per piccole quantità di caffè.</p>
         </h5>
     </div>
 
@@ -109,8 +109,8 @@
         <h4 class="titolo-paragrafo">Percolatore elettrico</h4>
         <h5 class="testo-corrente">
             <p class="paragrafo">L'acqua calda ricircola attraverso il caffè macinato più volte.</p>
-            <p class="paragrafo">Vantaggi: capacità di preparare grandi quantità di caffè.</p>
-            <p class="paragrafo">Svantaggi: il caffè può risultare troppo estratto e amaro se non monitorato attentamente.</p>
+            <p class="paragrafo"><b>Vantaggi:</b> capacità di preparare grandi quantità di caffè.</p>
+            <p class="paragrafo"><b>Svantaggi:</b> il caffè può risultare troppo estratto e amaro se non monitorato attentamente.</p>
         </h5>
     </div>
 
@@ -118,8 +118,8 @@
         <h4 class="titolo-paragrafo">Macchine a cialde o capsule</h4>
         <h5 class="testo-corrente">
             <p class="paragrafo">Utilizzano cialde o capsule preconfezionate di caffè per preparare una singola tazza alla volta.</p>
-            <p class="paragrafo">Vantaggi: estrema comodità e pulizia, ampia varietà di gusti.</p>
-            <p class="paragrafo">Svantaggi: costi più elevati per cialde/capsule rispetto al caffè macinato, impatto ambientale delle capsule.</p>
+            <p class="paragrafo"><b>Vantaggi:</b> estrema comodità e pulizia, ampia varietà di gusti.</p>
+            <p class="paragrafo"><b>Svantaggi:</b> costi più elevati per cialde/capsule rispetto al caffè macinato, impatto ambientale delle capsule.</p>
         </h5>
     </div>
 
@@ -128,8 +128,8 @@
         <h4 class="titolo-paragrafo">Aereopress</h4>
         <h5 class="testo-corrente">
             <p class="paragrafo">Caffè macinato immerso in acqua e poi pressato manualmente attraverso un filtro.</p>
-            <p class="paragrafo">Vantaggi: portatile, versatile, facile da pulire.</p>
-            <p class="paragrafo">Svantaggi: capacità limitata, richiede pratica per ottenere risultati ottimali.</p>
+            <p class="paragrafo"><b>Vantaggi:</b> portatile, versatile, facile da pulire.</p>
+            <p class="paragrafo"><b>Svantaggi:</b> capacità limitata, richiede pratica per ottenere risultati ottimali.</p>
         </h5>
     </div>
 
@@ -137,8 +137,8 @@
         <h4 class="titolo-paragrafo">Chemex e V60</h4>
         <h5 class="testo-corrente">
             <p class="paragrafo">Metodi di filtrazione manuale dove l'acqua calda viene versata sul caffè macinato contenuto in un filtro di carta.</p>
-            <p class="paragrafo">Vantaggi: produce un caffè pulito e aromatico, ideale per chi ama il caffè filtrato.</p>
-            <p class="paragrafo">Svantaggi: richiede attenzione e tecnica nel versamento dell'acqua, oltre che un tempo di preparazione più lungo.</p>
+            <p class="paragrafo"><b>Vantaggi:</b> produce un caffè pulito e aromatico, ideale per chi ama il caffè filtrato.</p>
+            <p class="paragrafo"><b>Svantaggi:</b> richiede attenzione e tecnica nel versamento dell'acqua, oltre che un tempo di preparazione più lungo.</p>
         </h5>
     </div>
 
@@ -160,12 +160,12 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">Funzionamento</h4>
         <h5 class="testo-corrente">
-            <p class="paragrafo">Tamburo o camera di tostatura: è il cuore della torrefattrice, dove i chicchi di caffè vengono riscaldati. Può essere un tamburo rotante o una camera statica con una fonte di calore.</p>
-            <p class="paragrafo">Sistema di riscaldamento: la macchina utilizza gas, elettricità o combustibili solidi. Il riscaldamento può essere diretto (il calore è applicato direttamente ai chicchi) o indiretto (il calore viene trasferito tramite un mezzo, come l’aria calda).</p>
-            <p class="paragrafo">Ventilazione e sistema di raffreddamento: dopo la tostatura, i chicchi devono essere rapidamente raffreddati per fermare il processo di cottura e preservarne il profilo aromatico. La ventilazione è importante  anche per rimuovere fumi e particelle 
+            <p>Tamburo o camera di tostatura: è il cuore della torrefattrice, dove i chicchi di caffè vengono riscaldati. Può essere un tamburo rotante o una camera statica con una fonte di calore.</p>
+            <p>Sistema di riscaldamento: la macchina utilizza gas, elettricità o combustibili solidi. Il riscaldamento può essere diretto (il calore è applicato direttamente ai chicchi) o indiretto (il calore viene trasferito tramite un mezzo, come l’aria calda).</p>
+            <p>Ventilazione e sistema di raffreddamento: dopo la tostatura, i chicchi devono essere rapidamente raffreddati per fermare il processo di cottura e preservarne il profilo aromatico. La ventilazione è importante  anche per rimuovere fumi e particelle 
                 derivanti dalla tostatura.</p>
-             <p class="paragrafo">Controllo della temperatura e del tempo: la macchina è dotata di strumenti per monitorare e regolare la temperatura e la durata del ciclo di tostatura. </p>
-             <p class="paragrafo">Scarico dei fumi: un sistema di scarico si occupa di rimuovere i fumi di scarto della tostatura.</p>
+             <p>Controllo della temperatura e del tempo: la macchina è dotata di strumenti per monitorare e regolare la temperatura e la durata del ciclo di tostatura. </p>
+             <p>Scarico dei fumi: un sistema di scarico si occupa di rimuovere i fumi di scarto della tostatura.</p>
             </h5>
     </div>
 
