--- a/produzione.html
+++ b/produzione.html
@@ -56,11 +56,8 @@
          <h5 class="testo-corrente">
              <p class="paragrafo">Utilizzano una leva che l'utente deve spingere per generare la pressione necessaria per estrarre l'espresso.</p>
              <p class="paragrafo"><b>Vantaggi:</b> controllo totale sul processo di estrazione.</p>
-<<<<<<< HEAD
-             <p> <b>Svantaggi:</b> richiedono esperienza e abilità per ottenere risultati consistenti. </p>
-=======
-             <p> ><b>Svantaggi</b> richiedono esperienza e abilità per ottenere risultati consistenti.</p>
->>>>>>> 5aefda8f824058ff0fa19154ff4446a508b402ad
+             <p class="paragrafo"><b>Svantaggi:</b> richiedono esperienza e abilità per ottenere risultati consistenti.</p>
+             <p><b>Svantaggi</b> richiedono esperienza e abilità per ottenere risultati consistenti.</p>
          </h5>
      </div>
 
@@ -71,7 +68,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Sono dotate di una pompa elettrica che l'utente attiva e disattiva manualmente per controllare l'estrazione.</p>
             <p class="paragrafo"><b>Vantaggi:</b>  buon equilibrio tra controllo manuale e facilità d'uso. </p>
-            <p class="paragrafo"><b>Svantaggi</b> necessitano un certo grado di competenza per ottimizzare l'estrazione.</p>
+            <p><b>Svantaggi</b> necessitano un certo grado di competenza per ottimizzare l'estrazione.</p>
         </h5>
     </div>
 
@@ -80,7 +77,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Automatizzando il controllo della quantità di acqua utilizzata per l'estrazione, l'utente deve solo premere un pulsante.</p>
             <p class="paragrafo"><b>Vantaggi:</b> facili da usare, costanza nella qualità del caffè.</p>
-            <p class="paragrafo"><b>Svanataggi:</b> meno controllo dell'estrazione rispetto alle macchine semiautomatiche.</p>
+            <p><b>Svanataggi:</b> meno controllo dell'estrazione rispetto alle macchine semiautomatiche.</p>
         </h5>
     </div>
 
@@ -89,7 +86,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Caffè macinato immerso in acqua calda, separato poi con un filtro a stantuffo.</p>
             <p class="paragrafo"><b>Vantaggi:</b> semplice da usare, produce un caffè ricco e corposo.</p>
-            <p class="paragrafo"><b>Svantaggi:</b> può risultare meno pratico rispetto ad altre macchine, e richiede tempo per la pulizia.</p>
+            <p><b>Svantaggi:</b> può risultare meno pratico rispetto ad altre macchine, e richiede tempo per la pulizia.</p>
         </h5>
     </div>
 
@@ -100,7 +97,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">L'acqua nel serbatoio inferiore viene riscaldata e trasformata in vapore, che passa attraverso il caffè macinato creando la bevanda.</p>
             <p class="paragrafo"><b>Vantaggi:</b> iconica e tradizionale, produce un caffè forte.</p>
-            <p class="paragrafo"><b>Svantaggi:</b> richiede pratica per ottenere risultati ottimali, adatta principalmente per piccole quantità di caffè.</p>
+            <p><b>Svantaggi:</b> richiede pratica per ottenere risultati ottimali, adatta principalmente per piccole quantità di caffè.</p>
         </h5>
     </div>
 
@@ -111,7 +108,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">L'acqua calda ricircola attraverso il caffè macinato più volte.</p>
             <p class="paragrafo"><b>Vantaggi:</b> capacità di preparare grandi quantità di caffè.</p>
-            <p class="paragrafo"><b>Svantaggi:</b> il caffè può risultare troppo estratto e amaro se non monitorato attentamente.</p>
+            <p><b>Svantaggi:</b> il caffè può risultare troppo estratto e amaro se non monitorato attentamente.</p>
         </h5>
     </div>
 
@@ -120,7 +117,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Utilizzano cialde o capsule preconfezionate di caffè per preparare una singola tazza alla volta.</p>
             <p class="paragrafo"><b>Vantaggi:</b> estrema comodità e pulizia, ampia varietà di gusti.</p>
-            <p class="paragrafo"><b>Svantaggi:</b> costi più elevati per cialde/capsule rispetto al caffè macinato, impatto ambientale delle capsule.</p>
+            <p><b>Svantaggi:</b> costi più elevati per cialde/capsule rispetto al caffè macinato, impatto ambientale delle capsule.</p>
         </h5>
     </div>
 
@@ -130,7 +127,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Caffè macinato immerso in acqua e poi pressato manualmente attraverso un filtro.</p>
             <p class="paragrafo"><b>Vantaggi:</b> portatile, versatile, facile da pulire.</p>
-            <p class="paragrafo"><b>Svantaggi:</b> capacità limitata, richiede pratica per ottenere risultati ottimali.</p>
+            <p><b>Svantaggi:</b> capacità limitata, richiede pratica per ottenere risultati ottimali.</p>
         </h5>
     </div>
 
@@ -139,7 +136,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Metodi di filtrazione manuale dove l'acqua calda viene versata sul caffè macinato contenuto in un filtro di carta.</p>
             <p class="paragrafo"><b>Vantaggi:</b> produce un caffè pulito e aromatico, ideale per chi ama il caffè filtrato.</p>
-            <p class="paragrafo"><b>Svantaggi:</b> richiede attenzione e tecnica nel versamento dell'acqua, oltre che un tempo di preparazione più lungo.</p>
+            <p><b>Svantaggi:</b> richiede attenzione e tecnica nel versamento dell'acqua, oltre che un tempo di preparazione più lungo.</p>
         </h5>
     </div>
 
@@ -152,8 +149,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Prima dell'invenzione delle macchine torrefattrici, il caffè veniva tostato manualmente. I chicchi di caffè venivano messi in padelle e riscaldati su fiamme aperte, mescolandoli continuamente per evitare che si bruciassero. Questo metodo era utilizzato in Etiopia e nelle regioni arabe durante i suoi primi sviluppi.  </p>
             <p class="paragrafo">Nel 1710, il torrefattore francese Du Belloy inventò una torrefattrice con tamburo rotante. Con l'avvento della rivoluzione industriale, l’industria del caffè subì una trasformazione significativa grazie all’avvento delle prime macchine torrefattrici a tamburo, brevettate poi nel 1864 da Jabez Burns.</p>
-            <p class="paragrafo">Successivamente le torrefattrici elettriche consentirono un controllo ancora più 
-                preciso poiché il flusso d'aria calda permise una tostatura uniforme, e la dotazione di sensori e software avanzati diedero la possibilità di monitorare l’estrazione esaltando le caratteristiche uniche dei diversi tipi di caffè. </p>
+            <p>Successivamente le torrefattrici elettriche consentirono un controllo ancora più preciso poiché il flusso d'aria calda permise una tostatura uniforme, e la dotazione di sensori e software avanzati diedero la possibilità di monitorare l’estrazione esaltando le caratteristiche uniche dei diversi tipi di caffè. </p>
         </h5>
 
     </div>
@@ -161,12 +157,11 @@
     <div class="blocco-sezione">
         <h4 class="titolo-paragrafo">Funzionamento</h4>
         <h5 class="testo-corrente">
-            <p>Tamburo o camera di tostatura: è il cuore della torrefattrice, dove i chicchi di caffè vengono riscaldati. Può essere un tamburo rotante o una camera statica con una fonte di calore.</p>
-            <p>Sistema di riscaldamento: la macchina utilizza gas, elettricità o combustibili solidi. Il riscaldamento può essere diretto (il calore è applicato direttamente ai chicchi) o indiretto (il calore viene trasferito tramite un mezzo, come l’aria calda).</p>
-            <p>Ventilazione e sistema di raffreddamento: dopo la tostatura, i chicchi devono essere rapidamente raffreddati per fermare il processo di cottura e preservarne il profilo aromatico. La ventilazione è importante  anche per rimuovere fumi e particelle 
-                derivanti dalla tostatura.</p>
-             <p>Controllo della temperatura e del tempo: la macchina è dotata di strumenti per monitorare e regolare la temperatura e la durata del ciclo di tostatura. </p>
-             <p>Scarico dei fumi: un sistema di scarico si occupa di rimuovere i fumi di scarto della tostatura.</p>
+            <p class="paragrafo"><b>Tamburo o camera di tostatura:</b> è il cuore della torrefattrice, dove i chicchi di caffè vengono riscaldati. Può essere un tamburo rotante o una camera statica con una fonte di calore.</p>
+            <p class="paragrafo"><b>Sistema di riscaldamento:</b> la macchina utilizza gas, elettricità o combustibili solidi. Il riscaldamento può essere diretto (il calore è applicato direttamente ai chicchi) o indiretto (il calore viene trasferito tramite un mezzo, come l’aria calda).</p>
+            <p class="paragrafo"><b>Ventilazione e sistema di raffreddamento:</b> dopo la tostatura, i chicchi devono essere rapidamente raffreddati per fermare il processo di cottura e preservarne il profilo aromatico. La ventilazione è importante  anche per rimuovere fumi e particelle derivanti dalla tostatura.</p>
+             <p class="paragrafo"><b>Controllo della temperatura e del tempo:</b> la macchina è dotata di strumenti per monitorare e regolare la temperatura e la durata del ciclo di tostatura. </p>
+             <p><b>Scarico dei fumi:</b> un sistema di scarico si occupa di rimuovere i fumi di scarto della tostatura.</p>
             </h5>
     </div>
 
