Correzione errori battitura produzione.html + aggiunta proprietà #titolo-paragrafo

--- a/produzione.html
+++ b/produzione.html
@@ -31,7 +31,6 @@
 
      <!--Hero section-->
      <div id="hero-section">
-        <!--<video class="img-hero" src="img/hero-video.mp4" controls></video> ------- Prova video hero-->
         <img class="img-hero" src="img/hero-produzione.jpg"></img>
        
         <div id="blocco-hero">
@@ -40,7 +39,7 @@
         </div>
     </div>
 
-     <!--Sezione produzioni-->
+     <!--Sezione tipologie di macchine-->
      <h3 class="titolo-sezione">Tipologie di macchine</h3>
 
      <div class="blocco-sezione">
@@ -56,7 +55,6 @@
          <h5 class="testo-corrente">
              <p class="paragrafo">Utilizzano una leva che l'utente deve spingere per generare la pressione necessaria per estrarre l'espresso.</p>
              <p class="paragrafo"><b>Vantaggi:</b> controllo totale sul processo di estrazione.</p>
-             <p class="paragrafo"><b>Svantaggi:</b> richiedono esperienza e abilità per ottenere risultati consistenti.</p>
              <p><b>Svantaggi</b> richiedono esperienza e abilità per ottenere risultati consistenti.</p>
          </h5>
      </div>
@@ -68,7 +66,7 @@
         <h5 class="testo-corrente">
             <p class="paragrafo">Sono dotate di una pompa elettrica che l'utente attiva e disattiva manualmente per controllare l'estrazione.</p>
             <p class="paragrafo"><b>Vantaggi:</b>  buon equilibrio tra controllo manuale e facilità d'uso. </p>
-            <p><b>Svantaggi</b> necessitano un certo grado di competenza per ottimizzare l'estrazione.</p>
+            <p><b>Svantaggi:</b> necessitano un certo grado di competenza per ottimizzare l'estrazione.</p>
         </h5>
     </div>
 
