Prima struttura responsive design + prove design

--- a/miscele.html
+++ b/miscele.html
@@ -54,14 +54,14 @@
 
         <a href="#caffe-in-cialde">
             <div class="blocco-icona-caffe">
-                <img class="icona-tipologia-caffe" src="icone/cialde.svg"></img>
+                <img class="icona-tipologia-caffe" src="icone/caffe-cialde.svg"></img>
                 <h4>Cialde</h4>
             </div>
         </a>
 
         <a href="#caffe-in-capsule">
             <div class="blocco-icona-caffe">
-                <img class="icona-tipologia-caffe" src="icone/capsule.svg"></img>
+                <img class="icona-tipologia-caffe" src="icone/caffe-capsule.svg"></img>
                 <h4>Capsule</h4>
             </div>
         </a>
