--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link href="https://www.fontshare.com/fonts/switzer" rel="stylesheet">
 </head>
 <body>
+        <!--Hamburger menu-->
+        <div id="hamburger-menu">
+            <div id="menu-xmark">
+                <img src="icone/menu-x.png"></img>
+            </div>
+            <div id="menu">
+                    <ul id="menu-list">
+                        <li class="menu-item"><img class="menu-icon" src="icone/menu-homepage.png"></img><a href="index.html">Home</a></li>
+                        <li class="menu-item"><img class="menu-icon" src="icone/menu-storia.png"></img><a href="storia.html">Storia</a></li>
+                        <li class="menu-item"><img class="menu-icon" src="icone/menu-miscele.png"></img><a href="miscele.html">Miscele e tipologie</a></li>
+                        <li class="menu-item"><img class="menu-icon" src="icone/menu-curiosita.png"></img><a href="curiosità.html">Curiosità</a></li>
+                        <li class="menu-item"><img class="menu-icon" src="icone/menu-ricette.png"></img><a href="ricette.html">Ricette</a></li>
+                        <li class="menu-item"><img class="menu-icon" src="icone/menu-caffe-dal-mondo.png"></img><a href="caffè-dal-mondo.html">Caffè dal mondo</a></li>
+                        <li class="menu-item"><img class="menu-icon" src="icone/menu-produzione.png"></img><a href="produzione.html">Produzione</a></li>
+                    </ul>
+
+                    <ul id="menu-list-footer">
+                        <a href="https://www.abacatania.it/"><li class="menu-item-footer">Privacy</li></a>
+                        <a href="https://www.abacatania.it/"><li class="menu-item-footer">Chi siamo</li></a>
+                    </ul>
+            </div>
+        </div>
+
       <!--Navbar-->
       <nav id="navbar">
         <div id="nav-main">
@@ -25,6 +48,9 @@
                     <li class="nav-item"><a href="produzione.html">Produzione</a></li>
                 </ul>
             </div>
+
+            <!--Menu button-->
+            <div id="hamburger-button"><img src="icone/menu-hamburger.png"></img></div>
 
         </div>
     </nav>
@@ -172,8 +198,9 @@
         </div>
 
     </footer>
+</body>
 
 <!--Javascript-->
 <script src="js/navbar.js"></script>
-</body>
+<script src="js/hamburger-menu.js"></script>
 </html>
