Responsive hero section + prove caffe-dal-mondo.html

--- a/caffè-dal-mondo.html
+++ b/caffè-dal-mondo.html
@@ -77,12 +77,66 @@
         </h5>
     </div>
 
+
+    <!--<div id="blocco-icone-nazioni">
+        <div class="icona-nazione">
+            <img src="icone/italia.png"></img>
+            <h5>Italia</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/turchia.png"></img>
+            <h5>Turchia</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/messico.png"></img>
+            <h5>Messico</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/indonesia.png"></img>
+            <h5>Indonesia</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/vietnam.png"></img>
+            <h5>Vietnam</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/irlanda.png"></img>
+            <h5>Irlanda</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/etiopia.png"></img>
+            <h5>Etiopia</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/argentina.png"></img>
+            <h5>Argentina</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/portogallo-algeria.png"></img>
+            <h5>Portogallo/Algeria</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/usa.png"></img>
+            <h5>USA</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/arabia-saudita.png"></img>
+            <h5>Arabia Saudita</h5>
+        </div>
+        <div class="icona-nazione">
+            <img src="icone/seychelles.png"></img>
+            <h5>Seychelles</h5>
+        </div>
+    </div>-->
+
     <img class="img-sezione" src="img/caffe-dal-mondo-img1.jpg"></img>
 
 
-    <!--Italia-->
+<!--Italia-->
+<div class="blocco-nazione">
     <div class="icona-nazione">
         <img src="icone/italia.png"></img>
+        <h5>Italia</h5>
     </div>
 
     <div id="italia">
@@ -109,6 +163,7 @@
             </h5>
         </div>
     </div>
+</div>
    
     <img class="img-sezione" src="img/caffe-dal-mondo-img2.jpg"></img>
 
@@ -116,6 +171,7 @@
     <!--Turchia-->
     <div class="icona-nazione">
         <img src="icone/turchia.png"></img>
+        <h5>Turchia</h5>
     </div>
 
     <div id="turchia">
@@ -138,6 +194,7 @@
     <!--Messico-->
     <div class="icona-nazione">
         <img src="icone/messico.png"></img>
+        <h5>Messico</h5>
     </div>
 
     <div id="messico">
@@ -146,7 +203,7 @@
         <div class="blocco-sezione">
             <h4 class="titolo-paragrafo">Caffè de Olla</h4>
             <h5 class="testo-corrente">
-                <p class="paragrafo">Un caffè speziato preparato con cannella e piloncillo (zucchero di canna grezzo), spesso servito in una tazza di terracotta per esaltarne il sapore. </p>
+                <p>Un caffè speziato preparato con cannella e piloncillo (zucchero di canna grezzo), spesso servito in una tazza di terracotta per esaltarne il sapore. </p>
         </div>
     </div>
 
@@ -154,6 +211,7 @@
     <!--Australia/Nuova Zelanda-->
     <div class="icona-nazione">
         <img src="icone/australia-nuova-zelanda.png"></img>
+        <h5>Australia/Nuova Zelanda</h5>
     </div>
 
     <div id="australia-nuova-zelanda">
@@ -171,6 +229,7 @@
     <!--Indonesia-->
     <div class="icona-nazione">
         <img src="icone/indonesia.png"></img>
+        <h5>Indonesia</h5>
     </div>
 
     <div id="indonesia">
@@ -186,6 +245,7 @@
     <!--Vietnam-->
     <div class="icona-nazione">
         <img src="icone/vietnam.png"></img>
+        <h5>Vietnam</h5>
     </div>
 
     <div id="vietnam">
@@ -210,6 +270,7 @@
     <!--Irlanda-->
     <div class="icona-nazione">
         <img src="icone/irlanda.png"></img>
+        <h5>Irlanda</h5>
     </div>
 
     <div id="irlanda">
@@ -228,6 +289,7 @@
     <!--Etiopia-->
     <div class="icona-nazione">
         <img src="icone/etiopia.png"></img>
+        <h5>Etiopia</h5>
     </div>
 
     <div id="etiopia">
@@ -252,6 +314,7 @@
     <!--Argentina-->
     <div class="icona-nazione">
         <img src="icone/argentina.png"></img>
+        <h5>Argentina</h5>
     </div>
 
     <div id="argentina">
@@ -282,7 +345,8 @@
 
     <!--Portogallo/Algeria-->
     <div class="icona-nazione">
-        <img src="icone/argentina.png"></img>
+        <img src="icone/portogallo-algeria.png"></img>
+        <h5>Portogallo/Algeria</h5>
     </div>
 
     <div id="portogallo-algeria">
@@ -302,6 +366,7 @@
     <!--USA-->
     <div class="icona-nazione">
         <img src="icone/usa.png"></img>
+        <h5>USA</h5>
     </div>
 
     <div id="usa">
@@ -319,6 +384,7 @@
     <!--Arabia Saudita-->
     <div class="icona-nazione">
         <img src="icone/arabia-saudita.png"></img>
+        <h5>Arabia Saudita</h5>
     </div>
 
     <div id="arabia-saudita">
@@ -335,6 +401,7 @@
     <!--isole Seychelles-->
     <div class="icona-nazione">
         <img src="icone/seychelles.png"></img>
+        <h5>Seychelles</h5>
     </div>
 
     <div id="seychelles">
