Completamento responsive design

--- a/caffè-dal-mondo.html
+++ b/caffè-dal-mondo.html
@@ -134,12 +134,12 @@
 
 <!--Italia-->
 <div class="blocco-nazione">
-    <div class="icona-nazione">
+    <div class="icona-nazione" id="italia">
         <img src="icone/italia.png"></img>
         <h5>Italia</h5>
     </div>
 
-    <div id="italia">
+    <div>
     <h3 class="titolo-sezione">Italia</h3>
 
         <div class="blocco-sezione">
@@ -169,12 +169,12 @@
 
 
     <!--Turchia-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="turchia">
         <img src="icone/turchia.png"></img>
         <h5>Turchia</h5>
     </div>
 
-    <div id="turchia">
+    <div>
     <h3 class="titolo-sezione">Turchia</h3>
 
         <div class="blocco-sezione">
@@ -192,12 +192,12 @@
 
 
     <!--Messico-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="messico">
         <img src="icone/messico.png"></img>
         <h5>Messico</h5>
     </div>
 
-    <div id="messico">
+    <div>
     <h3 class="titolo-sezione">Messico</h3>
 
         <div class="blocco-sezione">
@@ -209,12 +209,12 @@
 
 
     <!--Australia/Nuova Zelanda-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="australia-nuova-zelanda">
         <img src="icone/australia-nuova-zelanda.png"></img>
         <h5>Australia/Nuova Zelanda</h5>
     </div>
 
-    <div id="australia-nuova-zelanda">
+    <div>
     <h3 class="titolo-sezione">Australia/Nuova Zelanda</h3>
 
         <div class="blocco-sezione">
@@ -227,12 +227,12 @@
 
 
     <!--Indonesia-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="indonesia">
         <img src="icone/indonesia.png"></img>
         <h5>Indonesia</h5>
     </div>
 
-    <div id="indonesia">
+    <div>
     <h3 class="titolo-sezione">Indonesia</h3>
         <div class="blocco-sezione">
             <h4 class="titolo-paragrafo">Kopi Luwak</h4>
@@ -243,12 +243,12 @@
 
     
     <!--Vietnam-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="vietnam">
         <img src="icone/vietnam.png"></img>
         <h5>Vietnam</h5>
     </div>
 
-    <div id="vietnam">
+    <div>
     <h3 class="titolo-sezione">Vietnam</h3>
     
         <div class="blocco-sezione">
@@ -268,12 +268,12 @@
 
 
     <!--Irlanda-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="irlanda">
         <img src="icone/irlanda.png"></img>
         <h5>Irlanda</h5>
     </div>
 
-    <div id="irlanda">
+    <div>
     <h3 class="titolo-sezione">Irlanda</h3>
         <div class="blocco-sezione">
             <h4 class="titolo-paragrafo">Irish Coffee</h4>
@@ -287,12 +287,12 @@
 
 
     <!--Etiopia-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="etiopia">
         <img src="icone/etiopia.png"></img>
         <h5>Etiopia</h5>
     </div>
 
-    <div id="etiopia">
+    <div>
     <h3 class="titolo-sezione">Etiopia</h3>
         <div class="blocco-sezione">
             <h4 class="titolo-paragrafo">Ethiopian Coffee</h4>
@@ -312,12 +312,12 @@
 
 
     <!--Argentina-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="argentina">
         <img src="icone/argentina.png"></img>
         <h5>Argentina</h5>
     </div>
 
-    <div id="argentina">
+    <div>
     <h3 class="titolo-sezione">Argentina</h3>
 
         <div class="blocco-sezione">
@@ -344,12 +344,12 @@
 
 
     <!--Portogallo/Algeria-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="portogallo-algeria">
         <img src="icone/portogallo-algeria.png"></img>
         <h5>Portogallo/Algeria</h5>
     </div>
 
-    <div id="portogallo-algeria">
+    <div>
     <h3 class="titolo-sezione">Portogallo/Algeria</h3>
 
         <div class="blocco-sezione">
@@ -364,12 +364,12 @@
 
 
     <!--USA-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="usa">
         <img src="icone/usa.png"></img>
         <h5>USA</h5>
     </div>
 
-    <div id="usa">
+    <div>
     <h3 class="titolo-sezione">USA</h3>
 
         <div class="blocco-sezione">
@@ -382,12 +382,12 @@
 
 
     <!--Arabia Saudita-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="arabia-saudita">
         <img src="icone/arabia-saudita.png"></img>
         <h5>Arabia Saudita</h5>
     </div>
 
-    <div id="arabia-saudita">
+    <div>
     <h3 class="titolo-sezione">Arabia Saudita</h3>
 
         <div class="blocco-sezione">
@@ -399,12 +399,12 @@
 
 
     <!--isole Seychelles-->
-    <div class="icona-nazione">
+    <div class="icona-nazione"  id="seychelles">
         <img src="icone/seychelles.png"></img>
         <h5>Seychelles</h5>
     </div>
 
-    <div id="seychelles">
+    <div>
     <h3 class="titolo-sezione">Isole Seychelles</h3>
 
         <div class="blocco-sezione">
