Completamento responsive ricette mancante

--- a/miscele.html
+++ b/miscele.html
@@ -284,7 +284,7 @@
         </div>
     </div>
 
-    <img class="img-sezione" src="img/miscele-img3.jpg"></img>
+    <img class="img-sezione-finale" src="img/miscele-img3.jpg"></img>
     
     </div>
 
