--- a/produzione.html
+++ b/produzione.html
@@ -189,7 +189,7 @@
             </h5>
     </div>
 
-    <img class="img-sezione" src="img/produzione-img5.jpg"></img>
+    <img class="img-sezione-finale" src="img/produzione-img5.jpg"></img>
 
      <!--Footer-->
      <footer>
