--- a/curiosità.html
+++ b/curiosità.html
@@ -122,7 +122,7 @@
         </h5>
     </div>
 
-    <img class="img-sezione" src="img/curiosita-img2.jpg"></img>
+    <img class="img-sezione-finale" src="img/curiosita-img2.jpg"></img>
 
     <!--Footer-->
     <footer>
