--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
     <div id="hero-section">
 
         <!--Prova video in loop-->
-        <!--<div id="video-hero">
-            <video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video>
-        </div>-->
-        <img class="img-hero" src="img/hero-home.jpg"></img>
+        <div id="video-hero">
+            <div id="blur-hero">
+                <video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video>
+            </div>
+        </div>
+        <!--<img class="img-hero" src="img/hero-home.jpg"></img>-->
        
         <div id="blocco-hero-home">
             <img id="hero-marchio" src="icone/marchio-pausa-caffe.svg"></img>
