--- a/storia.html
+++ b/storia.html
@@ -6,7 +6,7 @@
     <title>Pausa Caffè</title>
     <link rel="shortcut icon" type="image/x-icon" href="icone/shortcut-icon-pausa-caffe.svg">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://www.fontshare.com/fonts/switzer" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/switzer" rel="stylesheet"> 
 </head>
 <body>
 <!--Hamburger menu-->
